[gd_scene load_steps=7 format=3 uid="uid://d0nmhojnw88sl"]

[ext_resource type="Script" path="res://ui/pause_menu/pause_menu.gd" id="1_xilg8"]
[ext_resource type="PackedScene" uid="uid://cw2dxhrhi0b1h" path="res://ui/level_select/level_select.tscn" id="2_sl5vl"]
[ext_resource type="PackedScene" uid="uid://c4rxpbdq82gpp" path="res://ui/settings/settings.tscn" id="3_d65mk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e6vcy"]
bg_color = Color(0, 0, 0, 0.47451)

[sub_resource type="InputEventAction" id="InputEventAction_ehgyd"]
action = &"pause"

[sub_resource type="Shortcut" id="Shortcut_drplb"]
events = [SubResource("InputEventAction_ehgyd")]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xilg8")
level_select_scene = ExtResource("2_sl5vl")
settings_scene = ExtResource("3_d65mk")

[node name="Fade" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e6vcy")

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -81.5
offset_right = 86.0
offset_bottom = 82.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Resume" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_drplb")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Resume"

[node name="LevelSelect" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Level Select"

[node name="Settings" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Settings"

[node name="Quit" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Quit"

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="pressed" from="HBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="HBoxContainer/LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="HBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HBoxContainer/Quit" to="." method="_on_quit_pressed"]
